--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Inbox
+      List swipe demo
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -11,15 +11,22 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">
-        Inbox
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
   <ion-list>
-    <app-message *ngFor="let message of getMessages()" [message]="message"></app-message>
+    <ng-container *ngFor="let item of items">
+      <ion-item-sliding>
+        <ion-item-options side="start">
+          <ion-item-option>Favorite</ion-item-option>
+          <ion-item-option color="danger">Share</ion-item-option>
+        </ion-item-options>
+
+        <ion-item>
+          <ion-label>{{ item.text }}</ion-label>
+        </ion-item>
+
+        <ion-item-options side="end">
+          <ion-item-option>Unread</ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ng-container>
   </ion-list>
 </ion-content>
